--- a/src/modules/hub-heading/_style.scss
+++ b/src/modules/hub-heading/_style.scss
@@ -54,8 +54,6 @@
   margin-top: 80px;
 }
 
-.rheader + .layout-content .hub-heading {margin-top: 60px;}
-
 
 @include large {
 
