--- a/src/modules/jumbotron/_style.scss
+++ b/src/modules/jumbotron/_style.scss
@@ -19,10 +19,12 @@
 
 // Keep space for the header, when the jumbotron is the first element after it
 .header-wrapper + .layout-content .jumbotron {
-  height: 400px;
-  padding-top: 80px;
+  margin-top: 0px;
 }
 
+.header-wrapper.fixed + .layout-content .jumbotron {
+  margin-top: 80px;
+}
 
 .jumbotron-wrapper {
   display: table-cell;
