--- a/src/modules/quick-access/_style.scss
+++ b/src/modules/quick-access/_style.scss
@@ -66,17 +66,17 @@
 }
 
 // Keep space for the header, when the quick-access is the first element after it
-.header-wrapper + .layout-content .quick-access {
-  $offset: 80px;
-
-  .quick-access-wrapper {top: 145px + $offset;}
-
-  &.searching {
-    .quick-access-close-search {
-      transform: translateY($offset);
-    }
-  }
-}
+//.header-wrapper + .layout-content .quick-access {
+//  $offset: 80px;
+//
+//  .quick-access-wrapper {top: 145px + $offset;}
+//
+//  &.searching {
+//    .quick-access-close-search {
+//      transform: translateY($offset);
+//    }
+//  }
+//}
 
 .quick-access-video,
 .quick-access-search {
